# testrepo

./: README.md  draftScript.py  pciepull.py  test.py  test2.py  testerv2.1.py  testerv3.1.py  testerv3.py  testscript.py
UpdatedAMC/AMC_Automation/: amcsensorpull.py  resettest.py  sensorlist.py  sensorparse.py  sensorplot.py
UpdatedAMC/UpdatedAMCAutomation/firmware.management.amc.tools.automation/automation/: Dockerfile  README.rst
UpdatedAMC/UpdatedAMCAutomation/firmware.management.amc.tools.automation/tools/amctool/: amc_config.json  bld.sh  meson.build  pl.sh
UpdatedAMC/UpdatedAMCAutomation/firmware.management.amc.tools.automation/tools/amctool/libpldm/: base.c  entity.h  firmware_update.c  fru.c  pdr.c  platform.c  state_set.h
UpdatedAMC/UpdatedAMCAutomation/firmware.management.amc.tools.automation/tools/amctool/mctp/: mctp.c  mctp.h  mctp_control.c  mctp_control.h  mctp_internal.h  smbus.c  smbus.h
UpdatedAMC/UpdatedAMCAutomation/firmware.management.amc.tools.automation/tools/amctool/pldm/: config.c  config.h  fwpkg.c  fwpkg.h  numeric_se.c  numeric_se.h  pldm.c  pldm.h  pldm_fru.c  pldm_fru.h  pldm_mc.c  pldm_mc.h  pldm_oem.c  pldm_oem.h  state_se.c  state_se.h  update_agent.c  utils.c  utils.h
UpdatedAMC/UpdatedAMCAutomation/sensormonitor/: amcsensorrepeat.bat  bmcsensorrepeat.bat
UpdatedAMC/UpdatedAMCAutomation/uart_fw_v20114/: autoupdatefw.py  boot_from_uart_hdr_py  flashcmd.txt
UpdatedAMC/UpdatedAMCAutomation/uart_fw_v20114/sketch_apr22a/: sketch_apr22a.ino
amc code/: sensormonitor.py  sensorparse.py
(+3248 files in other folders)
